# gemini_ros

./: README.md  install.sh  package.xml  setup.py
gemini_bringup/: CMakeLists.txt  package.xml
gemini_bringup/launch/: gemini_service.launch.py
gemini_interface/: CMakeLists.txt  package.xml
gemini_interface/srv/: GeminiService.srv
gemini_ros/: gemini_llm.py  gemini_stt.py  gemini_vlm.py  package.xml  setup.py  stt_test.py  vlm_test.py
gemini_ros/config/: crispe_framework.yaml
gemini_ros/gemini_ros/: gemini_service_client.py  gemini_service_server.py
launch/: gemini_llm_launch.py  gemini_stt_launch.py  gemini_vlm_launch.py
srv/: GeminiRequest.srv
