<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gemini_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yasumasashige790@gmail.com">sobits</maintainer>
  <license>TODO: License declaration</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>